<resources>
    <string name="app_name">Filmy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watched_films">Watched Films</string>
    <string name="planned_films">Planned films</string>
    <string name="add_film">Add Film</string>
    <string name="film">Film</string>
    <string name="film_name">Film name</string>
    <string name="genre">Genre</string>
    <string name="date_of_release">Date of release</string>
    <string name="link_to_image">Link to image</string>
    <string name="commentary_on_the_film">Commentary on the film</string>
    <string name="add_film_button">Add film</string>
    <string name="input_edit_type">Film Type</string>
    <string name="update_film">Update Film</string>
    <string name="add_image">Click to add image</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string-array name="tabs">
        <item>Watched</item>
        <item>Planned</item>
    </string-array>
</resources>