<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TitleBold"
        android:text="@string/update_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/film_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_name2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Lowercase"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvAddImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_name2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_date2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAddImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:hint="@string/date_of_release">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_date2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Lowercase"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_genre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_date2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/genre">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_genre2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Lowercase"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <RatingBar
        android:id="@+id/rating2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_genre2"
        tools:rating="2.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_comment2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/rating2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/commentary_on_the_film">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_comment2"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:layout_height="match_parent"
            style="@style/Lowercase"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner

        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/title2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/tabs"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_film"
        app:layout_constraintTop_toBottomOf="@id/input_comment2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/imageViewBack2"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/baseline_arrow_back_24"
        />


</androidx.constraintlayout.widget.ConstraintLayout>